--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
             height: 600px;
         }
 
+        @media (max-width: 768px) {
+            body{
+                overflow: auto;
+            }
+    .main {
+        flex-direction: column; /* Change to vertical (column) layout on mobile */
+    }
+}
+
         .unicode {
             /* background-color: white; */
             overflow: hidden;
