--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 overflow: auto;
             }
     .main {
+        height: 1200px;
         flex-direction: column; /* Change to vertical (column) layout on mobile */
     }
 }
