--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         @media (max-width: 768px) {
             body{
-                overflow: auto;
+                overflow: scroll !important;
             }
     .main {
         height: 1200px;
